--- a/views/List.ejs
+++ b/views/List.ejs
@@ -16,16 +16,22 @@
     </div>
     <div class="box">
 
-       <ul>
-        <% for( var i=0; i<newListItems.length; i++){ %>
-           <div class="item">
-               <input type="checkbox">
+       
 
-               <p><%= newListItems[i] %> </p>
-            </div>
-           
-        <% } %> 
-        </ul>
+
+      <%  newListItems.forEach(function(item){ %>
+        <form action="/delete" method="post">
+            <div class="item">
+                <input type="checkbox" name="checkbox" value="<%=item._id%>" onChange="this.form.submit()" ... >
+ 
+                <p><%= item.name %> </p>
+             </div>
+            </form>
+       <% }) %>
+
+
+         
+       
         <form class="item" action="/" method="post">
             <input type="text" name="newItem" placeholder="new item" autocomplete="off" >
             <button type="submit" name="list"value=<%= listTitle %>>+</button>
